<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LoginActivity">


    <View
        android:id="@+id/rounded_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_white_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.55" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/login"
        android:src="@drawable/image_login"
        app:layout_constraintBottom_toTopOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/rounded_view"
        app:layout_constraintEnd_toEndOf="@id/rounded_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        android:alpha="0"
        tools:alpha="100"
        android:textColorHint="@color/gray"
        app:layout_constraintTop_toTopOf="@id/rounded_view"
        app:layout_constraintBottom_toBottomOf="@id/rounded_view"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view">

        <com.example.submissionintermediate.view.customview.EmailEditText
            android:id="@+id/ed_login_email"
            android:alpha="0"
            tools:alpha="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="password_toggle"
        android:hint="@string/password"
        android:alpha="0"
        tools:alpha="100"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText">

        <com.example.submissionintermediate.view.customview.PasswordEditText
            android:id="@+id/ed_login_password"
            android:alpha="0"
            tools:alpha="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:alpha="0"
        tools:alpha="100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/dark_green"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:paddingVertical="12dp"
        android:layout_marginHorizontal="48dp" />

    <LinearLayout
        android:id="@+id/linear_layout_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="100"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/rounded_view"
        app:layout_constraintEnd_toEndOf="@+id/rounded_view"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/daftar"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textColor="@color/dark_green"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
