<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/logout" />
</menu>